# variant_annotation_tool

./: PyDocs.md  README.md  annotated_variants.csv  pydoc-markdown.yaml  pyproject.toml  requirements.txt  variant_annotation.py
src/: annotation.py  compute_hgvs.py  config.py  models.py  vep.py
