[project]
name = "variant-annotation-tool"
version = "0.1.0"
description = "Variant annotation tool written in python for the purpose of Tempus' Bioinformatics Technical Challenge"
authors = [
    {name = "Utsab Ray",email = "utsabray10@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cyvcf2 (>=0.31.4,<0.32.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
]

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pydoc-markdown (>=4.8.2,<5.0.0)"
]
